<resources>
    <string name="app_name">MyBestFriend</string>
    <string name="register">Sign up</string>
    <string name="login">Sign in</string>
    <string name="email">Email</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="email_error_fromat">Email format error</string>
    <string name="password">Password</string>
    <string name="password_empty">Password canot be empty</string>
    <string name="password_error_length">Password must be 6 character long</string>
    <string name="login_invalid">Invalid Email or password</string>
    <string name="login_message">Login</string>
    <string name="register_message">Register</string>
    <string name="recycle_error">Error while loading data</string>
    <string name="cat_name">Cat Name</string>
    <string name="cat_deescription">Cat Description</string>
    <string name="cat_origin">Origin : </string>
    <string name="life_span">Life span : </string>
    <string name="loading">Loading Image</string>
    <string name="cat_image">Cat Image</string>
    <string name="database_exception">Something went wrong while processing data. Please try again</string>
    <string name="api_exception">Something went wrong while processing data from network. Please try again</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
