<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="12dp"
    app:cardElevation="20dp"
    app:cardMaxElevation="15dp"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_background"
    android:padding="16dp">

    <ImageView
        android:id="@+id/catImageView"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/cat_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/placeholder" />

    <TextView
        android:id="@+id/catName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/cat_name"
        style="@style/Title"
        app:layout_constraintStart_toEndOf="@+id/catImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
    android:id="@+id/catLifeSpanTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="64dp"
    android:layout_marginTop="16dp"
    style="@style/Text"
    android:text="@string/life_span"
    app:layout_constraintStart_toEndOf="@+id/catImageView"
    app:layout_constraintTop_toBottomOf="@+id/catName" />


    <TextView
        android:id="@+id/catLifeSpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        style="@style/Text"
        android:text="@string/life_span"
        app:layout_constraintStart_toEndOf="@+id/catLifeSpanTitle"
        app:layout_constraintTop_toBottomOf="@+id/catName" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>